--- a/MyCalender/app/src/main/res/layout/splash.xml
+++ b/MyCalender/app/src/main/res/layout/splash.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent">
 
     <TextView
             android:id="@+id/name_tv"
@@ -41,3 +43,4 @@
 
 
 </android.support.constraint.ConstraintLayout>
+</layout>
